--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <script>
   var fireballSize = 22;
   var wizardSpeed = 3;
-  var wizardWidth = 50;
+  var wizardWidth = 70;
 
   var getFireballSpeed = function (left) {
     return left ? 5 : 2;
@@ -199,7 +199,7 @@
   }
 
   var getWizardY = function(height) {
-    return (height / 3  - 1.337 * wizardWidth);
+    return (height / 3  - getWizardHeight(wizardWidth));
   }
 </script>
 <script src="js/game.js"></script>
