--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
 <script>
   var fireballSize = 22;
-  var wizardSpeed = 3;
+  var wizardSpeed = 13;
   var wizardWidth = 70;
 
   var getFireballSpeed = function (left) {
@@ -202,6 +202,7 @@
     return (height / 3  - getWizardHeight(wizardWidth));
   }
 </script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 
