--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
 <script src="js/stat.js"></script>
 <script src="js/constants.js"></script>
 <script src="js/setup.js"></script>
+<script src="js/validate.js"></script>
 <script src="js/game.js"></script>
 
 
