--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 </script>
 <script src="js/stat.js"></script>
 <script src="js/constants.js"></script>
+<script src="js/random.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/validate.js"></script>
 <script src="js/game.js"></script>
