--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
 <script src="js/random.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/validate.js"></script>
+<script src="js/wizard.js"></script>
 <script src="js/game.js"></script>
 
 
