refactor: переносит модуль генерации и отображения похожих волшебников в файл similar.js и подключает к index.html

--- a/index.html
+++ b/index.html
@@ -209,9 +209,7 @@
 <script src="js/setup.js"></script>
 <script src="js/validate.js"></script>
 <script src="js/wizard.js"></script>
+<script src="js/similar.js"></script>
 <script src="js/game.js"></script>
-
-
-
 </body>
 </html>
