--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
 <script src="js/stat.js"></script>
 <script src="js/constants.js"></script>
 <script src="js/utils.js"></script>
-<script src="js/setup.js"></script>
+<script src="js/dialog.js"></script>
 <script src="js/validate.js"></script>
-<script src="js/wizard.js"></script>
+<script src="js/setup.js"></script>
 <script src="js/similar.js"></script>
 <script src="js/game.js"></script>
 </body>
