feat: удаляет тестовые объекты из верстки

--- a/index.html
+++ b/index.html
@@ -95,24 +95,12 @@
       <div class="setup-artifacts-cell">
         <img src="img/icon-star.png" alt="Star" width="65" height="50">
       </div>
-      <div class="setup-artifacts-cell">
-        <img src="img/icon-star.png" alt="Star" width="65" height="50">
-      </div>
-      <div class="setup-artifacts-cell">
-        <img src="img/icon-star.png" alt="Star" width="65" height="50">
-      </div>
-      <div class="setup-artifacts-cell">
-        <img src="img/icon-star.png" alt="Star" width="65" height="50">
-      </div>
-      <div class="setup-artifacts-cell">
-        <img src="img/icon-star.png" alt="Star" width="65" height="50">
-      </div>
-      <div class="setup-artifacts-cell">
-        <img src="img/icon-star.png" alt="Star" width="65" height="50">
-      </div>
-      <div class="setup-artifacts-cell">
-        <img src="img/icon-star.png" alt="Star" width="65" height="50">
-      </div>
+      <div class="setup-artifacts-cell"></div>
+      <div class="setup-artifacts-cell"></div>
+      <div class="setup-artifacts-cell"></div>
+      <div class="setup-artifacts-cell"></div>
+      <div class="setup-artifacts-cell"></div>
+      <div class="setup-artifacts-cell"></div>
       <div class="setup-artifacts-cell"></div>
     </div>
 
