--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
 <script src="js/dialog.js"></script>
 <script src="js/validate.js"></script>
 <script src="js/setup.js"></script>
+<script src="js/colorize-element.js"></script>
 <script src="js/similar.js"></script>
 <script src="js/game.js"></script>
 </body>
