feat: сортирует волшебников по похожести и выводит на панель, устранавливает задержку debounce

--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
 <script src="js/setup.js"></script>
 <script src="js/wizard.js"></script>
 <script src="js/colorize-element.js"></script>
+<script src="js/debounce.js"></script>
 <script src="js/similar.js"></script>
 <script src="js/game.js"></script>
 </body>
